force-app/main/default/objects/Analytics_Time_Tracker__c/Analytics_Time_Tracker__c.object-meta.xml
<CustomObject>
    <description>To hold timestamp for different events on which reporting is to be done</description>
    <label>Analytics Time Tracker</label>
    <nameField>
        <displayFormat>ATT-{000000}</displayFormat>
        <label>Analytics Time Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analytics Time Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>