force-app/main/default/objects/Analytics_Time_Tracker__c/fields/Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related benefit order record</description>
    <label>Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>Analytics Time Trackers</relationshipLabel>
    <relationshipName>Analytics_Time_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>