force-app/main/default/objects/Analytics_Time_Tracker__c/fields/Carrier_Order__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Carrier Order</description>
    <label>Carrier Order</label>
    <referenceTo>Carrier_Order__c</referenceTo>
    <relationshipLabel>Analytics Time Trackers</relationshipLabel>
    <relationshipName>Analytics_Time_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>