force-app/main/default/objects/Analytics_Time_Tracker__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(NOT(ISNULL( End_Date__c )) &amp;&amp; NOT(ISNULL( Start_Date__c )), End_Date__c - Start_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>