force-app/main/default/objects/Analytics_Time_Tracker__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>