force-app/main/default/objects/Analytics_Time_Tracker__c/recordTypes/Tax_Resolution.recordType-meta.xml
<RecordType>
    <fullName>Tax_Resolution</fullName>
    <active>true</active>
    <description>Tax Res time tracking records</description>
    <label>Tax Resolution</label>
</RecordType>